--- a/main.css
+++ b/main.css
@@ -2,16 +2,23 @@ body {
   background-color: #2D95BF;
   color: #034D6B;
   font-family: "montserrat", sans-serif;
+  padding: 20px;
 }
 
 .wrapper {
   border: 5px solid #034D6B;
-  margin: 20px;
+  margin: 0 auto;
+  max-width: 600px;
   padding: 40px;
+  text-align: center;
 }
 
 h1 {
   color: #000;
+}
+
+.banner {
+  padding: 30px 0;
 }
 
 button {
